# priscillafx-website

./: .dockerignore  .env-dev  .gitignore  Dockerfile  README.md  alembic.ini  depends.py  env-dev  pyproject.toml
migrations/: env.py
migrations/versions/: 16.04.2024_database_init.py  2024-04-17_init.py  2024-04-18_update8.py  2024-04-18_update9.py  2024-04-24_init.py  2024-06-24_add_custom.py  2024-06-24_fix_artists.py  2024-06-24_initial.py  a3cde7759abf_auth.py  init.py
priscillafx_website/: admin.py  database.py  depends.py  initialization.py  main.py
priscillafx_website/static/css/: about.css  faq.css  icons.css  index.css  mobile-adaptive.css
priscillafx_website/static/js/: random-bg.js
priscillafx_website/templates/: about.html  blog.html  faq.html  index.html
priscillafx_website/templates/admin/: create_post.html  login.html  menu.html
src/: config.py  database.py  gunicorn_conf.py  initialization.py  logger.py  main.py
src/artists/: models.py  router.py
src/auth/: config.py  manager.py  models.py  router.py  schemas.py  utils.py
src/blog/: models.py  router.py  schemas.py
src/custom/: models.py  router.py
src/pages/: router.py
src/static/css/: additional.css
src/static/css/admin/: login.css  menu.css
src/static/css/main/: about.css  artists.css  blog.css  custom.css  error.css  faq.css  icons.css  index.css
src/static/js/: main.js  music.js  random-bg.js
src/tasks/: router.py  tasks.py
src/templates/admin/: menu.html
src/templates/pages/: about.html  artists.html  blog.html  custom.html  error.html  faq.html  index.html
src/templates/website/: about.html  blog.html  faq.html  index.html
