[tool.poetry]
name = "priscillafx-website"
version = "0.1.0"
description = ""
authors = ["masajinobe-ef <priscilla.effects@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"
cryptography = "^42.0.5"
python-multipart = "^0.0.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
