[tool.poetry]
name = "priscillafx-website"
version = "0.1.0"
description = "Official website of Priscilla FX"
authors = ["masajinobe-ef <priscilla.effects@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
aioredis = "^2.0.1"
orjson = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
